[tool.poetry]
name = "tydale"
version = "0.1.0"
description = "A modern GTK+ client for TIDAL"
authors = ["Lukas Martini <hello@lutoma.org>"]

[tool.poetry.dependencies]
python = "^3.9"
tidalapi = "^0.6.7"
PyGObject = "^3.38.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
